<resources>
    <string name="app_name">Google registration</string>
    <string name="create_your_google_account">Create your Google Account</string>
    <string name="you_can_use_letters_numbers_period"><![CDATA[You can use letters , numbers & period]]></string>
    <string name="use_my_current_email_address_instead">Use my current email address instead</string>
    <string name="use_8_or_more_characters_with_a_mix_of_letters_numbers_symbols"><![CDATA[Use 8 or more characters with a mix of letters, numbers & symbols]]></string>
    <string name="next">Next</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="show_password">Show Password</string>
    <string name="sign_in_insted">Sign in insted</string>
</resources>